--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans')
 
 body{
-  background-color:#d4d4dc;
+  background:#d4d4d;
   font-family: 'Open Sans', sans-serif;
 }
